<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.RegisterFragment"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/linearlayout1">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            android:paddingTop="40dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_title_toolbar_register_fragment"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:paddingTop="20dp"/>

        </com.google.android.material.appbar.MaterialToolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/linearlayout2">

            <TextView
                android:id="@+id/textviewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_text"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/hint_edit_email"
                style="@style/EditTextTheme"
                android:inputType="textEmailAddress"
                android:layout_marginTop="4dp" />

            <TextView
                android:id="@+id/textViewSenha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passord_text"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"/>

            <EditText
                android:id="@+id/editTextSenha"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="textPassword"
                android:hint="@string/hint_edit_password"
                style="@style/EditTextTheme"
                android:layout_marginTop="4dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonCriarconta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_button_registeraccount_fragment"
                style="@style/ButtonTheme"
                android:layout_marginTop="16dp" />

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateTint="@color/white"
                android:layout_marginTop="8dp"
                android:visibility="invisible"
                tools:visibility="visible"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>